--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,3 @@
-body, html{
-  height:100%;
-}
-body{
-  margin: 0px;
-  background-color:#444;
-  font-size: 18px;
-}
-body, a:link, a:visited, a:active{
-  color: lightblue;
-}
-.title, .addDancerButton{
-  padding:5px 12px;
-  float:right;
-}
-.topbar{
-  height:32px;
-  background-color: #555;
-}
-.title{
-  background-color: #777;
-}
-.dancer{
-  border:10px solid red;
-  border-radius:10px;
-  position:absolute;
-}
-body.dancefloor {
-  padding-top: 100px;
-}
-.flipped {
-  transform: rotateY(180deg); 
-}
-
 
 /*Lets start with the cloud formation rather*/
 
@@ -160,3 +126,47 @@ body {
   0% {margin-left: 1000px;}
   100% {margin-left: -1000px;}
 }
+
+body, html{
+  height:100%;
+}
+body{
+  margin: 0px;
+  background-color:#444;
+  font-size: 18px;
+}
+body, a:link, a:visited, a:active{
+  color: lightblue;
+}
+.title, .addDancerButton{
+  padding:5px 12px;
+  float:right;
+}
+.topbar{
+  height:32px;
+  background-color: #555;
+}
+.title{
+  background-color: #777;
+}
+.dancer{
+  border:10px solid red;
+  border-radius:10px;
+  position:absolute;
+}
+body.dancefloor {
+  padding-top: 100px;
+}
+.flipped {
+  transform: rotateY(360deg); 
+  -webkit-transition:2s;
+  -moz-transition:2s;
+  -ms-transition:2s;
+  -o-transition:2s;
+  transition:2s;
+}
+
+.dancer:hover{
+  transform: rotateY(180deg); 
+}
+
