--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,35 @@ body {
   100% {margin-left: -1000px;}
 }
 
+@import url(http://fonts.googleapis.com/css?family=Lato:400,900|Montez);
+
+$buttonBackground: #2c3e50;
+$buttonColor: rgba(255,255,255,1);
+
+.sparkley {
+
+  background: lighten( $buttonBackground , 10% );
+  color: $buttonColor;
+  border: none;
+
+  padding: 16px 36px;
+  font-weight: normal;
+  
+  border-radius: 3px;
+  transition: all 0.25s ease;
+  
+  box-shadow: 0 38px 32px -23px black;
+  margin: 0 1em 1em;
+  
+  &:hover {
+   
+    background: $buttonBackground;
+    color: transparentize( $buttonColor,0.8 );
+    
+  }
+  
+}
+
 body, html{
   height:100%;
 }
@@ -158,12 +187,12 @@ body.dancefloor {
   padding-top: 100px;
 }
 .flipped {
-  transform: rotateY(360deg); 
-  -webkit-transition:2s;
-  -moz-transition:2s;
-  -ms-transition:2s;
-  -o-transition:2s;
-  transition:2s;
+  transform: scale(-1, 1);
+  -moz-transform: scale(-1, 1);
+  -webkit-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  -khtml-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
 }
 
 .dancer:hover{
